# nb-cli-plugin-rplugin

./: .flake8  .pre-commit-config.yaml  README.md  build_mo.py  pyproject.toml
.github/workflows/: release.yml
nb_cli_plugin_rplugin/: __init__.py  cli.py  exception.py  handler.py  installer.py  manager.py  meta.py  prompt.py
nb_cli_plugin_rplugin/locale/zh_CN/LC_MESSAGES/: nb-cli-plugin-rplugin.po
