[project]
name = "nb-cli-plugin-rplugin"
version = "0.1.0"
description = "nb-cli 富文本插件管理"
authors = [
    {name = "MingxuanGame", email = "MingxuanGame@outlook.com"},
]
dependencies = [
    "nb-cli>=1.0.0",
    "rich>=13.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["bot", "cli", "nonebot", "nb-cli"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0", "babel~=2.11"]
build-backend = "pdm.pep517.api"

[tool.black]
extend-exclude = '''
'''
include = '\.pyi?$'
line-length = 79
skip-string-normalization = true
target-version = ["py38", "py39", "py310", "py311"]

[tool.pyright]
reportShadowedImports = false
pythonVersion = "3.8"
pythonPlatform = "All"
executionEnvironments = [
  { root = "./" },
]

[tool.isort]
extra_standard_library = ["typing_extensions"]
force_sort_within_sections = true
length_sort = true
src_paths = ["nb_cli_plugin_rplugin"]
line_length = 79
profile = "black"
skip_gitignore = true

[tool.pycln]
path = "."
all = false

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.11.4",
    "black>=22.12.0",
    "flake8>=5.0.4",
    "nonemoji>=0.1.3",
    "pre-commit>=2.21.0",
    "babel>=2.11.0",
    "pycln>=2.1.2",
    "nb-cli @ git+https://github.com/nonebot/nb-cli.git",
]

[project.entry-points.nb]
rplugin = "nb_cli_plugin_rplugin.installer:install"

[tool.pdm.scripts]
lint = "flake8"
lgenerate = "pybabel extract -o messages.pot --project nb-cli-plugin-rplugin --version 0.1.0 nb_cli_plugin_rplugin/"
linit = "pybabel init -D nb-cli-plugin-rplugin -i messages.pot -d nb_cli_plugin_rplugin/locale/ -l zh_CN"
lupdate = "pybabel update -D nb-cli-plugin-rplugin -i messages.pot -d nb_cli_plugin_rplugin/locale/"
lcompile = "pybabel compile -D nb-cli-plugin-rplugin -d nb_cli_plugin_rplugin/locale/"

[tool.pdm.build]
setup-script = "build_mo.py"
run-setuptools = false
